# vrd

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  vrd.csv
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  ci.yml  coverage.yml  document.yml  format.yml  lint.yml  release.yml  test.yml
benches/: criterion.rs
examples/: all.rs  backends.rs  basics.rs  bools.rs  bounded.rs  bytes.rs  chars.rs  choose.rs  config.rs  dice.rs  errors.rs  example.rs  exponential.rs  floats.rs  hello.rs  iterators.rs  lottery.rs  macros.rs  mersenne.rs  monte.rs  normal.rs  nostd.rs  passwords.rs  poisson.rs  sample.rs  seed.rs  seedable.rs  serde.rs  shuffle.rs  slice.rs  strings.rs  support.rs  tokens.rs  traits.rs  unbiased.rs  uuid.rs  weighted.rs  xoshiro.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  macros.rs  main.rs  mersenne_twister.rs  random.rs  xoshiro.rs
src/vrd/: lib.rs.html  macros.rs.html  mersenne_twister.rs.html  random.rs.html
src/xtask/: main.rs.html
tests/: test.rs  test_cli.rs  test_lib.rs  test_macros.rs  test_main.rs  test_mersenne_twister.rs  test_proptest.rs  test_random.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
vrd/: all.html  fn.create_log_entry.html  fn.log_entry_async.html  fn.run.html  index.html  macro.rand_alphanumeric!.html  macro.rand_alphanumeric.html  macro.rand_bool!.html  macro.rand_bool.html  macro.rand_bytes!.html  macro.rand_bytes.html  macro.rand_char!.html  macro.rand_char.html  macro.rand_choose!.html  macro.rand_choose.html  macro.rand_double!.html  macro.rand_double.html  macro.rand_exponential!.html  macro.rand_exponential.html  macro.rand_float!.html  macro.rand_float.html  macro.rand_int!.html  macro.rand_int.html  macro.rand_new!.html  macro.rand_new.html  macro.rand_normal!.html  macro.rand_normal.html  macro.rand_poisson!.html  macro.rand_poisson.html  macro.rand_pseudo!.html  macro.rand_pseudo.html  macro.rand_range!.html  macro.rand_range.html  macro.rand_seed!.html  macro.rand_seed.html  macro.rand_shuffle!.html  macro.rand_shuffle.html  macro.rand_string!.html  macro.rand_string.html  macro.rand_twist!.html  (+9 more)
vrd/macros/: index.html
vrd/mersenne_twister/: index.html  sidebar-items.js  struct.MersenneTwisterConfig.html
vrd/random/: index.html  struct.Random.html
xtask/: Cargo.toml  all.html  fn.main.html  index.html
