[package]
# Metadata about the package.
authors = ["The Random (VRD) Contributors"]
build = "build.rs"
categories = ['Algorithms', 'Encoding','Parser implementations','Data structures']
description = "A Rust library for generating random and pseudo-random numbers based on the Mersenne Twister algorithm"
documentation = "https://docs.rs/vrd"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://vrdlib.com"

# Included and excluded files
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**"
]
keywords = ["entropy", "rand", "random-number", "random", "vrd"]
license = "MIT OR Apache-2.0"
name = "vrd"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/vrd"
rust-version = "1.56.0"
version = "0.0.8"

[[bench]]
# [[bench]] sections define benchmarks.
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[profile.bench]
# Profile for benchmarks.
debug = true

[dependencies]
# Dependencies are only used for building.
bitflags = "2.6.0"
dtt = "0.0.6"
rand = "0.8.5"
rlg = "0.0.4"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde-big-array =  "0.5.1"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde_yml = { version = "0.0.12", optional = true }
toml = { version = "0.8.19", optional = true }

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9.5" # Check the Rust version used to compile the package.

[dev-dependencies]
# Development dependencies are only used for testing and building.
assert_cmd = "2.0.16"
criterion = "0.5.1"

[lib]
crate-type = ["lib"]
name = "vrd"
path = "src/lib.rs"

[features]
# No default features
default = []
yaml = ["serde_yml"]
toml = ["dep:toml"]

[package.metadata.docs.rs]
# Specify arguments for rustdoc to enhance documentation quality.
rustdoc-args = [
    "--generate-link-to-definition",
    "--cfg", "docsrs",
    "--document-private-items",
    "--display-warnings"
]

# Linting config
[lints.rust]

## Warn
# box_pointers = "warn"
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
# unused_results = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
# missing_docs = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
