[package]
authors = ["The Random (VRD) Contributors"]
build = "build.rs"
categories = ["algorithms", "no-std", "embedded"]
description = "A lightweight, no_std-friendly random number generator backed by Xoshiro256++ with optional Mersenne Twister support."
documentation = "https://docs.rs/vrd"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://vrdlib.com"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**"
]
keywords = ["rng", "random", "no-std", "xoshiro", "mersenne-twister"]
license = "MIT OR Apache-2.0"
name = "vrd"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/vrd"
rust-version = "1.70"
version = "0.0.10"

[[bench]]
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[profile.bench]
debug = true

[dependencies]
rand = { version = "0.10", default-features = false }
libm = { version = "0.2", default-features = false }
serde = { version = "1.0.209", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", default-features = false, optional = true }

[build-dependencies]
version_check = "0.9.5"

[dev-dependencies]
assert_cmd = "2.2"
criterion = "0.5.1"
fastrand = "2"
serde_json = "1.0.127"

[lib]
crate-type = ["lib"]
name = "vrd"
path = "src/lib.rs"

[[bin]]
name = "vrd"
path = "src/main.rs"
required-features = ["std"]

[features]
default = ["std"]
std = ["alloc", "serde?/std", "rand/std", "rand/thread_rng"]
alloc = ["rand/alloc", "serde?/alloc"]
serde = ["dep:serde", "dep:serde-big-array"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

# Linting config
[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"

bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
